Customer features added
